--- a/index.html
+++ b/index.html
@@ -2,4 +2,10 @@
 
 <html>
 
+<head>
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" />
+<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+<script src="http://code.jquery.com/jquery.js"></script>
+</head>
+
 </html>
