--- a/index.html
+++ b/index.html
@@ -8,4 +8,12 @@
 <script src="http://code.jquery.com/jquery.js"></script>
 </head>
 
+<body>
+
+<div data-role="header">
+  <h1>FluxBB</h1>
+</div>
+
+</body>
+
 </html>
