--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" />
 <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
-<script src="http://code.jquery.com/jquery.js"></script>
+<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 
 <body>
