--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <html>
 
 <head>
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" />
-<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+
+  <!-- begin meta tags -->
+  <meta charset="utf-8">
+  <!-- end meta tags -->
+
+  <!-- begin css -->
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" />
+  <!-- end css -->
+
+  <!-- begin js -->
+  <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+  <!-- end js -->
+
 </head>
 
 <body>
