--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <!-- begin meta tags -->
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- end meta tags -->
 
   <!-- begin css -->
