--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
 
 <body>
 
-<div data-role="header">
-  <h1>FluxBB</h1>
+<div data-role="page">
+
+  <div data-role="header">
+    <h1>FluxBB</h1>
+  </div>
+
 </div>
 
 </body>
