--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <!-- end css -->
 
   <!-- begin js -->
+  <script src="http://code.jquery.com/jquery.js"></script>
   <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
-  <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
   <!-- end js -->
 
 </head>
