--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div data-role="page">
 
-  <div data-role="header" data-position="fixed" data-fullscreen="true">
+  <div data-role="header" data-position="fixed">
     <h1>FluxBB</h1>
   </div>
 
