--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 
   <div data-role="header" data-position="fixed">
     <h1>FluxBB</h1>
+    <div data-role="navbar">
+      <ul>
+        <li><a href="#">Home</a></li>
+      </ul>
+    </div>
   </div>
 
 </div>
