--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>FluxBB</h1>
     <div data-role="navbar">
       <ul>
-        <li class="ui-btn-active"><a href="./index.html">Home</a></li>
+        <li><a href="./index.html" class="ui-btn-active">Home</a></li>
       </ul>
     </div>
   </div>
