--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div data-role="navbar">
       <ul>
         <li><a href="./index.html" class="ui-btn-active">Home</a></li>
+        <li><a href="#">Features</a></li>
       </ul>
     </div>
   </div>
