--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <ul>
         <li><a href="./index.html" class="ui-btn-active">Home</a></li>
         <li><a href="#">Features</a></li>
+        <li><a href="#">Download</a></li>
       </ul>
     </div>
   </div>
