--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <li><a href="./index.html" class="ui-btn-active">Home</a></li>
         <li><a href="#">Features</a></li>
         <li><a href="#">Download</a></li>
+        <li><a href="#">Community</a></li>
+        <li><a href="#">Get Involved</a></li>
+        <li><a href="#">Extend</a></li>
+        <li><a href="#">Docs</a></li>
+        <li><a href="#">Blog</a></li>
       </ul>
     </div>
   </div>
